tests/errors/pp-duplicate-define.h
#define EXPANDME1 a
#define EXPANDME1 b
